src/objects/BDR_Productivity__c.object
<CustomObject>
    <fields>
        <fullName>BDR_Name__c</fullName>
        <label>BDR Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date of the BDR Hours counted</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <label># Hours Worked</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>BDR Productivity</label>
    <nameField>
        <label>BDR Productivity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BDR Productivities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>